--- a/index.html/index.html
+++ b/index.html/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     
     <style>
-        body, h1, h2, h3, h4, h5, h6 {
+        body, h1, h2, h3, h4, h5 {
             font-family: "Lato", sans-serif
         }
 
@@ -24,7 +24,7 @@
 
     
     <header class="container red center" style="padding:128px 16px">
-        <h1 class="margin jumbo">START PAGE</h1>
+        <h1 class="margin jumbo">Welcome!</h1>
         <p class="xlarge">Welcome to Brooks Friedmans Website!!!!!!</p>
     </header>
 
@@ -32,7 +32,7 @@
         <div class="content">
             <div class="twothird">
                 <h1>Brooks Friedmans about page and skill sets</h1>
-                <h5 class="padding-32">Brooks is a hardworking MIS 3033 student trying to pass Professor Ackemans class</h5>
+                <h5 class="padding-32">Brooks is a hardworking MIS 3033 student trying to pass Professor Ackemans class.  The purpose of this website is to practice making websites</h5>
 
                 <p class="text-grey">
                     Brooks has skills in coding, making websites, making databases, using PowerBI, and excel! 
@@ -52,7 +52,7 @@
             </div>
 
             <div class="twothird">
-                <h1>Lorem Ipsum</h1>
+                <h1>Extra Info</h1>
                 <h5 class="padding-32">Brooks Friedmans employment history </h5>
 
                 <p class="text-grey">
